fix(booking-panel): add dark mode to bootstrap view

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -4,8 +4,13 @@
     }
 }
 
-.dark {
+#placeos .dark {
     color: #fff;
+    
+    bootstrap,
+    [app-bootstrap] {
+        @apply bg-neutral-600;
+    }
 }
 
 button.mat-button,
